--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "next build && gh-pages -d .next"
   },
   "dependencies": {
     "@fontsource/archivo-black": "^4.5.9",
@@ -34,6 +35,7 @@
     "cypress": "^11.0.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.0",
+    "gh-pages": "^6.2.0",
     "sharp": "^0.31.2",
     "typescript": "4.8.3"
   }
